--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -7,7 +7,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
-      <h1> What is Gastritis? - Home</h1>
+    <div class="container header">
+
+  
+
+      <img id="logo" src="000.png" class="rotate90" width="150px" height="200px"  alt="Our Logo">
+
+    </div>
+    <br>
       <nav class="navbar navbar-default navbar-fixed-top top-nav">
                      <div class="container nav">
            <a href="index.html"class="active">Home</a>
@@ -37,7 +44,7 @@ in the mucus of their stomach lining, which eventually form ulcers. It is
   stage of gastritis wether it is in the beginning or late stages.
 </p>
 
-     
+
      <h2> Why Should I know about Gastritis?</h2>
     <p> We want people to be aware of gastritis and of the places it<br>
        impacts because they could be a part of the cycle. The good news<br>
