--- a/Final-Project/contact.html
+++ b/Final-Project/contact.html
@@ -4,11 +4,17 @@
 
   <title> Gastritis </title>
     <link rel="stylesheet" href= "style/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Cousine&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
+<div class="container header">
 
-    <h1> Gastritis - Contact Us! </h1>
+  
+
+<img id="logo" src="000.png" class="rotate90" width="150px" height="200px" alt="Our Logo">
+
+</div>
+<br>
     <nav class="navbar navbar-default navbar-fixed-top top-nav">
              <div class="container nav">
    <a href="index.html">Home</a>
@@ -20,7 +26,7 @@
        </nav>
        </header>
       <center>
-      <h2> Contact Paola! </h2>
+    <br>
 
         <div class="container">
 
@@ -30,7 +36,7 @@
 
           <img src="images/face.jpg" alt="Paola Picture" class="round">
 
-            <h1 class="c">Contact Me!</h1>
+            <h1 class="c">Contact Paola!</h1>
 
             <form method="POST" action="https://formspree.io/paola.hernandez@scholar.smashprogram.org">
 
@@ -54,12 +60,12 @@
 
 
 
-          <h2> Contact Endia! </h2>
+
       <div class="container">
         <div class="container hereWeAre" >
       <div class="col-4">
       <img src="images/endia.jpg" width="400px" height="500px" alt="Endia Picture" class="round">
-      <h1 class="c">Contact Me!</h1>
+      <h1 class="c">Contact Endia!</h1>
       <form method="POST" action="https://formspree.io/endia.shanneoah@scholar.smashprogram.org">
 
               <input type="name" name="name" placeholder="Name">
@@ -77,13 +83,13 @@
   </div>
 
         <center>
-        <h2> Contact Arely! </h2>
+
         <div class="container">
           <div class="container hereWeAre" >
         <div class="col-4">
-      <img src="images/arely.jpg" width="400" height="450" alt="Arely Picture" class="round"
+      <img src="images/arely.jpg" width="300" height="450" alt="Arely Picture" class="round"
       class="rotateimg180">
-        <h1 class="c">Contact Me!</h1>
+        <h1 class="c">Contact Arely!</h1>
         <form method="POST" action="https://formspree.io/arely.jauregui-martinez@scholar.smash.org">
 
                 <input type="name" name="name" placeholder="Name">
@@ -97,17 +103,18 @@
             </form>
 
         </div>
+
 </div>
 </div>
 
         <center>
-        <h2> Contact Ryann'! </h2>
+
 
         <div class="container">
           <div class="container hereWeAre" >
         <div class="col-4">
-            <img src="images/ryann.jpg" width="400" height="300" alt="Arely Picture" class="round">
-        <h1 class="c">Contact Me!</h1>
+            <img src="images/ryann.jpg" width="450" height="300" alt="Arely Picture" class="round">
+        <h1 class="c">Contact Ryann'!</h1>
         <form method="POST" action="https://formspree.io/ryann.clark@scholar.smash.org">
 
                 <input type="name" name="name" placeholder="Name">
