--- a/Final-Project/prototype.html
+++ b/Final-Project/prototype.html
@@ -4,9 +4,16 @@
 
   <title> Gastritis </title>
     <link rel="stylesheet" href="style/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
-    <h1> Gastritis - Prototype</h1>
+    <div class="container header">
+
+    
+
+    <img id="logo" src="000.png" class="rotate90" width="150px" height="200px" alt="Our Logo">
+
+  </div>
 
     <nav class="navbar navbar-default navbar-fixed-top top-nav">
              <div class="container nav">
